--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,12 @@ header {
     border:3px solid black;
     background-color:darkred;
 }
+
+main {
+    border:3px solid black;
+
+}
+
+footer {
+    border:3px solid black;
+}
