--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -15,7 +15,7 @@
 #inputRecherche{
 
     position:absolute;
-    width:95%;
+    width:90%;
     border:1px solid black;
     height:32px;
     background-color:rgba($color: #929292, $alpha: 0.9);
@@ -52,7 +52,24 @@
            }
         }
     }
+    #inputRecherche{
 
+        position:absolute;
+        width:95%;
+        border:1px solid black;
+        height:32px;
+        background-color:rgba($color: #929292, $alpha: 0.9);
+        padding:3px;
+        z-index:-1;
+        opacity:0;
+        transition:1s all;
+    }
+    
+    #checkRecherche:checked ~ #menu>#inputRecherche{
+        z-index:1;
+        opacity:1;
+        transition:1s all;
+    }
 }
 
 @media screen and (min-width: 1000px) {
