--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ header {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 5em;
   padding: 1rem 0 .1rem 0;
   margin: 0;
 }
@@ -311,14 +311,20 @@ h2 {
   margin: 0;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 500px) {
   header h1 {
-    font-size: 5em;
+    font-size: 3em;
     margin: 0;
   }
   header h2 {
     font-size: 1em;
     margin: 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  header h1 {
+    font-size: 3em;
   }
 }
 
@@ -595,7 +601,7 @@ l'état checked est testé ici:
 @media screen and (max-width: 1000px) and (min-width: 500px) {
   #btnRecherche {
     position: absolute;
-    top: 47%;
+    top: 28%;
     left: 94%;
     -webkit-transition: 1s all;
     transition: 1s all;
