--- a/sass/_element.scss
+++ b/sass/_element.scss
@@ -8,7 +8,7 @@ header {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 5em;
     padding: 1rem 0 .1rem 0;
     margin: 0;
 }
@@ -21,10 +21,10 @@ h2 {
 
 
 
-@media screen and (min-width:500px) {
+@media screen and (max-width:500px) {
     header {
         h1 {
-            font-size: 5em;
+            font-size: 3em;
         
             margin:0;
         }
@@ -33,6 +33,14 @@ h2 {
                 font-size: 1em;
              
                 margin :0;
+        }
+    }
+}
+
+@media screen and (max-width:1000px){
+    header{
+        h1{
+            font-size:3em;
         }
     }
 }
