--- a/sass/style.css
+++ b/sass/style.css
@@ -34,6 +34,27 @@ License: GNU General Public License v2 or later
   opacity: 0.9;
 }
 
+.caseLi2 {
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  background-color: #520000;
+  opacity: 0.9;
+}
+
+.caseLi3 {
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  background-color: #864100;
+  opacity: 0.9;
+}
+
+.caseLi4 {
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  background-color: #644d00;
+  opacity: 0.9;
+}
+
 /*
   Le resultat CSS produit par SCSS
 
@@ -279,7 +300,7 @@ header {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 5em;
   padding: 1rem 0 .1rem 0;
   margin: 0;
 }
@@ -290,14 +311,20 @@ h2 {
   margin: 0;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 500px) {
   header h1 {
-    font-size: 5em;
+    font-size: 3em;
     margin: 0;
   }
   header h2 {
     font-size: 1em;
     margin: 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  header h1 {
+    font-size: 3em;
   }
 }
 
@@ -328,10 +355,6 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-header {
-  z-index: 999;
 }
 
 header,
@@ -447,14 +470,8 @@ l'état checked est testé ici:
   transition: transform 1s;
   transition: transform 1s, -webkit-transform 1s;
   left: 10px;
-  top: 5px;
+  top: 41px;
   cursor: pointer;
-}
-
-#btnRecherche {
-  position: absolute;
-  top: 25%;
-  left: 50%;
 }
 
 #menu {
@@ -462,7 +479,7 @@ l'état checked est testé ici:
   display: -ms-flexbox;
   display: flex;
   position: absolute;
-  top: 110px;
+  top: 140px;
   background-color: #381717;
   -webkit-box-align: start;
       -ms-flex-align: start;
@@ -479,7 +496,7 @@ l'état checked est testé ici:
   margin-left: -20px;
   padding-left: 20px;
   padding-bottom: 20px;
-  margin-top: 32px;
+  margin-top: 15%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -505,7 +522,8 @@ l'état checked est testé ici:
 #menu ul li a {
   text-decoration: none;
   display: block;
-  padding: 6px 3px 3px 30px;
+  -webkit-transition: background-color 1s;
+  transition: background-color 1s;
   color: #b3afaf;
 }
 
@@ -521,8 +539,18 @@ l'état checked est testé ici:
 @media screen and (min-width: 500px) {
   #btnRecherche {
     position: absolute;
-    top: 25%;
-    left: 25%;
+    top: 26.8%;
+    left: 98.4%;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    padding: 1px;
+  }
+  #btnRecherche:hover {
+    background-color: #803535;
+    -webkit-transition: 1s all;
+    transition: 1s all;
   }
   #btnMenu {
     display: none;
@@ -564,6 +592,31 @@ l'état checked est testé ici:
   }
   #menu ul li a:hover {
     background-color: #803535;
+  }
+}
+
+@media screen and (max-width: 1000px) and (min-width: 500px) {
+  #btnRecherche {
+    position: absolute;
+    top: 28%;
+    left: 94%;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    padding: 1px;
+  }
+  #btnRecherche:hover {
+    background-color: rgba(192, 127, 127, 0.7);
+    border-radius: 5px;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #btnRecherche {
+    display: none;
   }
 }
 
@@ -735,15 +788,16 @@ en précédent notre extension avec «%»
 }
 
 #entete div p {
-  padding-right: 1%;
+  padding-right: 6%;
 }
 
 #inputRecherche {
   position: absolute;
-  width: 95%;
-  height: 33px;
-  background-color: rgba(146, 146, 146, 0.6);
-  padding: 2%;
+  width: 90%;
+  border: 1px solid black;
+  height: 32px;
+  background-color: rgba(146, 146, 146, 0.9);
+  padding: 3px;
   z-index: -1;
   opacity: 0;
   -webkit-transition: 1s all;
@@ -755,5 +809,75 @@ en précédent notre extension avec «%»
   opacity: 1;
   -webkit-transition: 1s all;
   transition: 1s all;
+}
+
+@media screen and (min-width: 500px) {
+  #entete {
+    background-color: black;
+    width: 100%;
+  }
+  #entete div {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  #entete div p {
+    padding-right: 5%;
+    width: 25%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  #inputRecherche {
+    position: absolute;
+    width: 95%;
+    border: 1px solid black;
+    height: 32px;
+    background-color: rgba(146, 146, 146, 0.9);
+    padding: 3px;
+    z-index: -1;
+    opacity: 0;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+  }
+  #checkRecherche:checked ~ #menu > #inputRecherche {
+    z-index: 1;
+    opacity: 1;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  #entete {
+    background-color: black;
+    width: 100%;
+  }
+  #entete div {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  #entete div p {
+    padding-right: 1%;
+    width: 20%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
 }
 /*# sourceMappingURL=style.css.map */
