--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,4 +49,8 @@ License: GNU General Public License v2 or later
 /*- entete
 */
 @import "_entete.scss";
-
+/* --------------------------------------------------------------
+# Slider 
+---------------------------------------------------------------- */
+ @import "_slider.scss";
+/*-------------------------------------------------------------- */
