--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,5 @@
 body {
-    width: 100vw;
+    width: 100%;
     min-height :100vh;
     font-family: 'Roboto', sans-serif;
     // le layout est entièrement flexbox
@@ -11,7 +11,7 @@ header,
 nav,
 main,
 footer {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
