modification css sur quelques éléments

--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -18,7 +18,8 @@
     width:90%;
     border:1px solid black;
     height:32px;
-    background-color:rgba($color: #929292, $alpha: 0.9);
+    color:white;
+    background-color:rgba($color: #6e2e2e, $alpha: 0.9);
     padding:3px;
     z-index:-1;
     opacity:0;
@@ -58,7 +59,8 @@
         width:95%;
         border:1px solid black;
         height:32px;
-        background-color:rgba($color: #929292, $alpha: 0.9);
+        color:white;
+        background-color:rgba($color: #773f3f, $alpha: 0.9);
         padding:3px;
         z-index:-1;
         opacity:0;
