--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,6 @@
 $couleur_rouge : rgb(92, 38, 38);
-$couleur_blanc : rgb(179, 175, 175);
-
+$couleur_blanc : rgb(255, 255, 255);
+$couleur_noir : rgb(0,0,0);
 $couleur_vert :#2ecc71;
 $couleur_bleu :#3498db;
 $couleur_jaune :#f1c40f;
