--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ On définit ici des règles de styles générales qui peuvent être enrichies ai
 Ces règles servent de bases  
 */
 header {
-  color: #b19090;
+  color: #ffffff;
 }
 
 h1 {
@@ -357,6 +357,12 @@ footer {
           justify-content: center;
 }
 
+header {
+  padding-bottom: 2%;
+  -webkit-box-shadow: inset 0 0 15px black;
+          box-shadow: inset 0 0 15px black;
+}
+
 header,
 footer {
   background-color: #a44444;
@@ -383,9 +389,9 @@ main {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  background-color: #f8efef;
-  color: #676262;
-  height: 580px;
+  background-color: #333333;
+  color: #d9d9d9;
+  height: 530px;
 }
 
 main section {
@@ -526,7 +532,7 @@ l'état checked est testé ici:
   display: block;
   -webkit-transition: background-color 1s;
   transition: background-color 1s;
-  color: #b3afaf;
+  color: white;
 }
 
 #menu ul li a:hover {
@@ -541,7 +547,7 @@ l'état checked est testé ici:
 @media screen and (min-width: 500px) {
   #btnRecherche {
     position: absolute;
-    top: 26.8%;
+    top: 30.5%;
     left: 98.4%;
     -webkit-transition: 1s all;
     transition: 1s all;
@@ -654,7 +660,7 @@ desktop : 4 colonnes
   transition: 1s all;
   padding-top: 30px;
   padding-bottom: 30px;
-  color: #ccc9c9;
+  color: white;
 }
 
 #pied-page section {
@@ -819,7 +825,8 @@ en précédent notre extension avec «%»
   width: 90%;
   border: 1px solid black;
   height: 32px;
-  background-color: rgba(146, 146, 146, 0.9);
+  color: white;
+  background-color: rgba(110, 46, 46, 0.9);
   padding: 3px;
   z-index: -1;
   opacity: 0;
@@ -863,7 +870,8 @@ en précédent notre extension avec «%»
     width: 95%;
     border: 1px solid black;
     height: 32px;
-    background-color: rgba(146, 146, 146, 0.9);
+    color: white;
+    background-color: rgba(119, 63, 63, 0.9);
     padding: 3px;
     z-index: -1;
     opacity: 0;
@@ -921,6 +929,8 @@ en précédent notre extension avec «%»
   overflow: hidden;
   width: 100%;
   height: 400px;
+  -webkit-box-shadow: inset 0 0 15px black;
+          box-shadow: inset 0 0 15px black;
 }
 
 img {
