--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -17,6 +17,8 @@ footer {
 }
 header {
     //z-index: 999;
+    padding-bottom:2%;
+    box-shadow: inset 0 0 15px rgb(0, 0, 0);
    // flex:1;
 }
 
@@ -38,9 +40,10 @@ main {
     align-items: center; // pour que la section .global soit centrée
     justify-content: center;
     flex : 1 1 auto; // pour pousser le footer en bas du viewport
-    background-color: lighten($couleur_rouge, 70%);
-    color :  darken($couleur_blanc, 30%);
-    height:580px;
+    background-color: lighten($couleur_noir, 20%);
+    color :  darken($couleur_blanc, 15%);
+    height:530px;
+    
     section {
         display : flex;
         flex-direction: column;
