--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -8,7 +8,7 @@
     overflow: hidden;
     width: 100%;
     height :400px;
-    
+    box-shadow: inset 0 0 15px rgb(0, 0, 0);
 }
 img {
     object-fit: cover;
