ajout du HTML et du CSS de mon coequipier (Jean-Thomas Morin)

--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -11,7 +11,13 @@
        }
     }
 }
+header {
 
+    background-image: url(../img/images/metallica_logo.png);
+    filter: brightness(200%);
+    position: absolute;
+
+}
 #inputRecherche{
 
     position:absolute;
