--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,6 +18,11 @@ License: GNU General Public License v2 or later
 # Variables
 --------------------------------------------------------------*/
 @import "_variables.scss";
+/* --------------------------------------------------------------
+# normalize
+---------------------------------------------------------------- */
+@import "_normalize.scss";
+/*-------------------------------------------------------------- */
 /* ------------------------------------------------------------
 
 
@@ -31,10 +36,7 @@ License: GNU General Public License v2 or later
 # Layout
 --------------------------------------------------------------*/
 @import "_layout.scss";
-/* ------------------------------------------------------------
-# Menu
---------------------------------------------------------------*/
-@import "_menu.scss";
+
 /*--------------------------------------------------------------
 # Pied-page 
 ----------------------------------------------------------------*/
@@ -50,7 +52,27 @@ License: GNU General Public License v2 or later
 */
 @import "_entete.scss";
 /* --------------------------------------------------------------
-# Slider 
+# caroussel
 ---------------------------------------------------------------- */
- @import "_slider.scss";
+ @import "_caroussel.scss";
 /*-------------------------------------------------------------- */
+
+/* --------------------------------------------------------------
+# main
+---------------------------------------------------------------- */
+@import "_main.scss";
+/*-------------------------------------------------------------- */
+
+/* --------------------------------------------------------------
+# typography
+---------------------------------------------------------------- */
+@import "_typography.scss";
+/*-------------------------------------------------------------- */
+
+
+/* --------------------------------------------------------------
+# navigation
+---------------------------------------------------------------- */
+@import "_navigation.scss";
+/*-------------------------------------------------------------- */
+
