--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,3 +6,8 @@ $couleur_bleu :#3498db;
 $couleur_jaune :#f1c40f;
 
 
+$couleur_sombre: rgb(27, 27, 27);
+$couleur_nav: rgba(61, 61, 61, .8);
+$couleur_texte: rgb(189, 189, 189);
+$couleur_texte_hover: rgb(145, 145, 145);
+$couleur_main: rgb(70, 70, 70);
