--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -16,7 +16,7 @@ header {
     background-image: url(../img/images/metallica_logo.png);
     filter: brightness(200%);
     position: absolute;
-
+    margin-top:2%;
 }
 #inputRecherche{
 
