--- a/sass/_pied-page.scss
+++ b/sass/_pied-page.scss
@@ -25,7 +25,7 @@ desktop : 4 colonnes
         padding: 10px 0 10px 0;
         flex :1;
         text-align : center;
-        border: 3px dotted lighten($couleur_rouge, 17%);
+        border: 3px solid lightgrey;
         ;
         li {
            padding : 3px;
