--- a/css/style.css
+++ b/css/style.css
@@ -375,16 +375,16 @@ template {
 /* ---------------------------------------- */
 /* ---------------------------------------- */
 .caseLi {
-  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
-          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
   border: 3px solid white;
   background-color: black;
   opacity: 0.9;
 }
 
 .caseLi2 {
-  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
-          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
   border: 3px solid white;
   background-color: #aaaaaa;
   opacity: 0.9;
@@ -392,16 +392,16 @@ template {
 }
 
 .caseLi3 {
-  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
-          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
   border: 3px solid white;
   background-color: #7e7e7e;
   opacity: 0.9;
 }
 
 .caseLi4 {
-  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
-          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
   border: 3px solid white;
   background-color: #d1d1d1;
   opacity: 0.9;
@@ -431,20 +431,20 @@ les mixins Sass vous permettent de définir des propriétés sur un seul emplace
 Le mixin précédent peut être réutilisé dans d'autres règles:
 ------------------------------------------------------------------------------------------------------------------------ */
 .modal-background {
-  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
-          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
   border: 3px solid white;
 }
 
 .product-link {
-  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
-          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
   border: 3px solid white;
 }
 
 .image-pattern {
-  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
-          box-shadow: 5px 10px rgba(151, 151, 151, 0.5);
+  -webkit-box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
+          box-shadow: 5px 10px rgba(151, 151, 151, 0.1);
   border: 3px solid white;
 }
 
@@ -651,7 +651,7 @@ en précédent notre extension avec «%»
 # Layout
 --------------------------------------------------------------*/
 body {
-  background-color: #1b1b1b;
+  background-color: #5e5e5e;
   width: 100%;
   height: 100vh;
   margin: 0 auto;
@@ -759,6 +759,8 @@ desktop : 4 colonnes
   padding: 10px;
   list-style-type: none;
   margin: 0;
+  margin-right: 2%;
+  margin-bottom: 2%;
   padding: 10px 0 10px 0;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -1158,6 +1160,8 @@ main {
 ---------------------------------------------------------------- */
 nav {
   background-color: rgba(61, 61, 61, 0.8);
+  border-top: 2px solid lightgrey;
+  border-bottom: 2px solid lightgrey;
 }
 
 nav ul li {
