--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,6 @@
 body {
 
-    background-color: $couleur_sombre;
+    background-color: rgba($color: #5e5e5e, $alpha: 1.0);
     width: 100%;
     height: 100vh;
     margin: 0 auto;
