--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,7 +1,8 @@
 nav {
 
     background-color: $couleur_nav;
-
+    border-top:2px solid lightgrey;
+    border-bottom:2px solid lightgrey;
     ul {
 
         li {
