--- a/sass/_pied-page.scss
+++ b/sass/_pied-page.scss
@@ -22,6 +22,8 @@ desktop : 4 colonnes
         padding : 10px;
         list-style-type: none;
         margin:0;
+        margin-right:2%;
+        margin-bottom:2%;
         padding: 10px 0 10px 0;
         flex :1;
         text-align : center;
