ajout d'un effet active sur les boutons du slider

--- a/css/style.css
+++ b/css/style.css
@@ -1077,6 +1077,10 @@ img:hover {
   background-color: white;
 }
 
+.slider_btns:active {
+  background-color: black;
+}
+
 .fadeOut {
   /*transition: filter 1s;
 	filter: brightness(0%);*/
