--- a/sass/style.scss
+++ b/sass/style.scss
@@ -76,3 +76,9 @@ License: GNU General Public License v2 or later
 @import "_navigation.scss";
 /*-------------------------------------------------------------- */
 
+/* --------------------------------------------------------------
+# grid
+---------------------------------------------------------------- */
+@import "_grid.scss";
+/*-------------------------------------------------------------- */
+
