--- a/css/style.css
+++ b/css/style.css
@@ -1137,6 +1137,12 @@ img:hover {
   }
 }
 
+@media screen and (max-width: 600px) {
+  .div_controls {
+    display: none;
+  }
+}
+
 /*-------------------------------------------------------------- */
 /* --------------------------------------------------------------
 # main
@@ -1202,6 +1208,341 @@ nav ul li a:hover {
 nav ul li a:hover::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
+}
+
+/*-------------------------------------------------------------- */
+/* --------------------------------------------------------------
+# grid
+---------------------------------------------------------------- */
+/*
+       le modèle colonne permet l'affichage sur 3 colonnes
+       chaque colonne mesure 100px.
+       cette dimension reste fixe
+       */
+.conteneur {
+  padding-top: 5%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: 50px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+      grid-template-rows: 50px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+  grid-gap: 20px;
+  background-color: transparent;
+  color: #444;
+}
+
+.boite {
+  background-color: #dd7f7f;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 100%;
+  letter-spacing: 2px;
+  border: 1px solid black;
+  -webkit-transition: letter-spacing 1s;
+  transition: letter-spacing 1s;
+}
+
+.boite:hover {
+  letter-spacing: 0px;
+}
+
+.day1 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid black;
+  border-radius: 25px;
+  padding-top: 3%;
+  -webkit-transition: letter-spacing 1s;
+  transition: letter-spacing 1s;
+  background-color: lightyellow;
+}
+
+.day1:hover {
+  letter-spacing: 3px;
+}
+
+.day2 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid black;
+  border-radius: 25px;
+  padding-top: 3%;
+  -webkit-transition: letter-spacing 1s;
+  transition: letter-spacing 1s;
+  background-color: lightskyblue;
+}
+
+.day2:hover {
+  letter-spacing: 3px;
+}
+
+.day3 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid black;
+  border-radius: 25px;
+  padding-top: 3%;
+  -webkit-transition: letter-spacing 1s;
+  transition: letter-spacing 1s;
+  background-color: lightblue;
+}
+
+.day3:hover {
+  letter-spacing: 3px;
+}
+
+.day4 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid black;
+  border-radius: 25px;
+  padding-top: 3%;
+  -webkit-transition: letter-spacing 1s;
+  transition: letter-spacing 1s;
+  background-color: lightcoral;
+}
+
+.day4:hover {
+  letter-spacing: 3px;
+}
+
+.day5 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid black;
+  border-radius: 25px;
+  padding-top: 3%;
+  -webkit-transition: letter-spacing 1s;
+  transition: letter-spacing 1s;
+  background-color: lightseagreen;
+}
+
+.day5:hover {
+  letter-spacing: 3px;
+}
+
+/*
+définir l'étendue de chaque classe
+*/
+.pauseCommune {
+  background-color: lightgreen;
+}
+
+.pasDeCours {
+  background-color: lightskyblue;
+}
+
+.cours {
+  background-color: lightsalmon;
+}
+
+.a {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 5;
+  -ms-grid-column: 1;
+  grid-area: 2/1/span 5/1;
+}
+
+.b {
+  -ms-grid-row: 7;
+  -ms-grid-row-span: 5;
+  -ms-grid-column: 1;
+  grid-area: 7/1/span 5/1;
+}
+
+.c {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 4;
+  -ms-grid-column: 2;
+  grid-area: 2/2/span 4/2;
+}
+
+.d {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  grid-area: 6/2/span 2/2;
+}
+
+.e {
+  -ms-grid-row: 8;
+  -ms-grid-row-span: 4;
+  -ms-grid-column: 2;
+  grid-area: 8/2/span 4/2;
+}
+
+.g {
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  grid-area: 5/3/span 1/3;
+}
+
+.f {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 3;
+  grid-area: 2/3/span 3/3;
+}
+
+.h {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  grid-area: 6/3/span 1/3;
+}
+
+.j {
+  -ms-grid-row: 10;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  grid-area: 10/3/span 2/3;
+}
+
+.i {
+  -ms-grid-row: 7;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 3;
+  grid-area: 7/3/span 3/3;
+}
+
+.k {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 4;
+  -ms-grid-column: 4;
+  grid-area: 2/4/span 4/4;
+}
+
+.l {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 4;
+  grid-area: 6/4/span 2/4;
+}
+
+.m {
+  -ms-grid-row: 8;
+  -ms-grid-row-span: 4;
+  -ms-grid-column: 4;
+  grid-area: 8/4/span 4/4;
+}
+
+.n {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 5;
+  -ms-grid-column: 5;
+  grid-area: 2/5/span 5/5;
+}
+
+.o {
+  -ms-grid-row: 7;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 5;
+  grid-area: 7/5/span 3/5;
+}
+
+.p {
+  -ms-grid-row: 10;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 5;
+  grid-area: 10/5/span 2/5;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 1.2em;
+    margin-left: 0%;
+  }
+  .boite {
+    font-size: 12px;
+    font-weight: bold;
+    -webkit-transition: letter-spacing 1s;
+    transition: letter-spacing 1s;
+    padding: 0;
+    padding-top: 5%;
+  }
+  .boite:hover {
+    letter-spacing: 0px;
+  }
+  .conteneur {
+    grid-gap: 5px;
+    -ms-grid-columns: 100px 100px 100px 100px 100px;
+        grid-template-columns: 100px 100px 100px 100px 100px;
+  }
+  .day1 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding-top: 3%;
+    -webkit-transition: letter-spacing 1s;
+    transition: letter-spacing 1s;
+    background-color: lightyellow;
+    padding-top: 15%;
+  }
+  .day1:hover {
+    letter-spacing: 3px;
+  }
+  .day2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding-top: 3%;
+    -webkit-transition: letter-spacing 1s;
+    transition: letter-spacing 1s;
+    background-color: lightskyblue;
+    padding-top: 13%;
+  }
+  .day2:hover {
+    letter-spacing: 3px;
+  }
+  .day3 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding-top: 3%;
+    -webkit-transition: letter-spacing 1s;
+    transition: letter-spacing 1s;
+    background-color: lightblue;
+    padding-top: 12%;
+  }
+  .day3:hover {
+    letter-spacing: 3px;
+  }
+  .day4 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding-top: 3%;
+    -webkit-transition: letter-spacing 1s;
+    transition: letter-spacing 1s;
+    background-color: lightcoral;
+    padding-top: 12%;
+  }
+  .day4:hover {
+    letter-spacing: 3px;
+  }
+  .day5 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding-top: 3%;
+    -webkit-transition: letter-spacing 1s;
+    transition: letter-spacing 1s;
+    background-color: lightseagreen;
+    padding-top: 12%;
+  }
+  .day5:hover {
+    letter-spacing: 3px;
+  }
 }
 
 /*-------------------------------------------------------------- */
